--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -66,6 +66,25 @@ jobs:
           else
             echo "tag=$(echo "${{ github.sha }}" | cut -c1-8)" >> $GITHUB_ENV
           fi
+
+      - name: Write base image version info
+        run: |
+          BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            echo "tag: ${GITHUB_REF/refs\/tags\//}, sha: ${{ github.sha }}" > base_image_version.txt
+          else
+            echo "sha: ${{ github.sha }}" > base_image_version.txt
+          fi
+          echo "build_date: $BUILD_DATE" >> base_image_version.txt
+          echo "runner_os: ${{ runner.os }}" >> base_image_version.txt
+          echo "runner_name: ${{ runner.name }}" >> base_image_version.txt
+          echo "runner_arch: ${{ runner.arch }}" >> base_image_version.txt
+
+      - name: Copy base_image_version.txt to all build contexts
+        run: |
+          for dir in postgres run_stage build_stage ui_run_stage; do
+            cp -f base_image_version.txt "$dir/base_image_version.txt"
+          done
   
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
@@ -74,36 +93,64 @@ jobs:
         uses: docker/build-push-action@v5 # v5.0.0
         with:
           context: run_stage/
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/python_run_stage:${{ env.tag }}"
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: Scan python_run_stage image for vulnerabilities with Trivy
+        if: github.event_name != 'pull_request'
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/python_run_stage:${{ env.tag }}"
+          format: table
+          exit-code: 1
+          severity: HIGH,CRITICAL
+
       - name: build_stage.Dockerfile - Build and push Docker image 
         id: build-and-push-build_stage
         uses: docker/build-push-action@v5 # v5.0.0
         with:
           context: build_stage/
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/python_build_stage:${{ env.tag }}"
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: Scan python_build_stage image for vulnerabilities with Trivy
+        if: github.event_name != 'pull_request'
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/python_build_stage:${{ env.tag }}"
+          format: table
+          exit-code: 1
+          severity: HIGH,CRITICAL
+
+
       - name: ui_run_stage.Dockerfile - Build and push Docker image 
         id: build-and-push-ui_run_stage
         uses: docker/build-push-action@v5 # v5.0.0
         with:
           context: ui_run_stage/
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/ui_run_stage:${{ env.tag }}"
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Scan ui_run_stage image for vulnerabilities with Trivy
+        if: github.event_name != 'pull_request'
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/ui_run_stage:${{ env.tag }}"
+          format: table
+          exit-code: 1
+          severity: HIGH,CRITICAL
 
       # - name: ui_run_stage_arm64v8.Dockerfile- Build and push Docker image 
       #   id: build-and-push-ui_run_stage_arm64
@@ -121,9 +168,18 @@ jobs:
         uses: docker/build-push-action@v5 # v5.0.0
         with:
           context: postgres/
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/postgres:${{ env.tag }}"
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Scan postgres image for vulnerabilities with Trivy
+        if: github.event_name != 'pull_request'
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: "${{ env.REGISTRY }}/${{ env.NAMESPACE }}/postgres:${{ env.tag }}"
+          format: table
+          exit-code: 1
+          severity: HIGH,CRITICAL
