--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,4 +1,6 @@
-FROM postgres:17.4-bookworm
+FROM postgres:17.5-bookworm
+
+COPY base_image_version.txt /base_image_version.txt
 
 # Install dependencies and pgvector extension
 RUN apt-get update && apt-get install -y \
